# FlappyHTML5

./: FlappyBird.html  copyToXampp.sh  flappy.js  sprite.js  style.css
Flappy/: flappy.js
ModelPreviewer/: .gitignore
ModelPreviewer/app/: build.gradle
ModelPreviewer/app/src/main/: AndroidManifest.xml
ModelPreviewer/app/src/main/assets/Models/: suzanne.tri
ModelPreviewer/app/src/main/assets/Textures/: cube.pkm  suzanne.pkm  witch.pkm
ModelPreviewer/app/src/main/cpp/: CMakeLists.txt  Helper.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  TextureETC1.cpp  TextureETC1.h  Vertex.h  gles2jni.cpp  gles2jni.h
ModelPreviewer/app/src/main/java/krustyfishgl/modelpreviewer/: GLES2JNIActivity.java  GLES2JNILib.java  GLES2JNIView.java
RotatingCube/app/: build.gradle
RotatingCube/app/src/main/: AndroidManifest.xml
RotatingCube/app/src/main/cpp/: CMakeLists.txt  Renderer.cpp  Renderer.h  gles2jni.cpp  gles2jni.h  gles3jni.cpp
RotatingCube/app/src/main/java/com/android/gles3jni/: GLES3JNIView.java
RotatingCube/app/src/main/java/krustyfishgl/rotatingcube/: GLES2JNIActivity.java  GLES2JNILib.java  GLES2JNIView.java  GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java
RotatingCube/app/src/main/res/values/: strings.xml
Tetris/: index.html  style.css  tetris.js
